--- a/14-s3.md
+++ b/14-s3.md
@@ -5,3 +5,5 @@ What is policy in S3?
 
 - **It specifies who (users, groups, or the public) can perform what actions (e.g., read, write, delete) on the bucket or its contents, under what conditions.**
 
+
+# policy = permission (kon kya kar sakta hai)
