--- a/14-s3.md
+++ b/14-s3.md
@@ -7,3 +7,10 @@ What is policy in S3?
 
 
 # policy = permission (kon kya kar sakta hai)
+
+
+| Entity | Simple Meaning | Correct Statement |
+| :--- | :--- | :--- |
+| **S3 Policy** | **Permissions** | **Policy = Permission** (Sahi) |
+| **IAM Policy** | **Permissions** | **Policy = Permission** (Sahi) |
+| **IAM Role** | **Temporary Identity** | **Role = Wo jo Permission (Policy) Use Karta Hai** |
