--- a/14-s3.md
+++ b/14-s3.md
@@ -14,3 +14,6 @@ What is policy in S3?
 | **S3 Policy** | **Permissions** | **Policy = Permission** (Sahi) |
 | **IAM Policy** | **Permissions** | **Policy = Permission** (Sahi) |
 | **IAM Role** | **Temporary Identity** | **Role = Wo jo Permission (Policy) Use Karta Hai** |
+
+
+Policy hamesha woh rules ka document hai jo batata hai ki kya karne ki ijazat hai.
